--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,7 +176,11 @@ li, a{
         height: 42vh;
     }
 
-    .w_3{width: 2%;}
+    footer > div > div:nth-last-of-type(2){
+        margin-top: unset !important;
+    }
+
+    .w_3{width: 3%;}
 }
 
 @media screen and (min-width: 1200px) and (max-width: 1399px){
@@ -217,7 +221,11 @@ li, a{
         font-size: 0.7rem;
     }
 
-    .w_3{width: 1.5%;}
+    footer > div > div:nth-last-of-type(2){
+        margin-top: unset !important;
+    }
+
+    .w_3{width: 2.5%;}
 }
 
 /* xxl */
@@ -261,5 +269,9 @@ li, a{
         font-size: 0.7rem;
     }
 
-    .w_3{width: 1%;}
+    footer > div > div:nth-last-of-type(2){
+        margin-top: unset !important;
+    }
+
+    .w_3{width: 1.8%;}
 }
