--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,14 +75,23 @@ li, a{
     display: none;
 }
 
+._ps-img > div{
+    border-bottom: 2px solid transparent;
+}
+
 ._ps-img > div:hover{
     border-bottom: 2px solid #0f7ad1;
+}
+
+._showcase > div img,
+.new_releases > div img{
+    border: 2px solid transparent;
+    padding: 2px;
 }
 
 ._showcase > div img:hover,
 .new_releases > div img:hover{
     border: 2px solid #0f7ad1;
-    padding: 2px;
 }
 
 ._hero-2{
